--- a/ecdsa.vcxproj
+++ b/ecdsa.vcxproj
@@ -91,6 +91,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>miracl_x86.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -138,6 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="big.h" />
+    <ClInclude Include="ecn.h" />
+    <ClInclude Include="miracl.h" />
+    <ClInclude Include="mirdef.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ecdsa.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
