--- a/ecdsa.vcxproj
+++ b/ecdsa.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClCompile Include="ecdsa.c" />
     <ClCompile Include="rsa.c" />
+    <ClCompile Include="sm2.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
