--- a/ecdsa.vcxproj.filters
+++ b/ecdsa.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="rsa.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="sm2.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
