--- a/ecdsa.vcxproj
+++ b/ecdsa.vcxproj
@@ -143,11 +143,15 @@
     <ClInclude Include="ecn.h" />
     <ClInclude Include="miracl.h" />
     <ClInclude Include="mirdef.h" />
+    <ClInclude Include="sm3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ecdsa.c" />
     <ClCompile Include="rsa.c" />
     <ClCompile Include="sm2.c" />
+    <ClCompile Include="sm2en.c" />
+    <ClCompile Include="sm2encry0.c" />
+    <ClCompile Include="sm3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
