--- a/ecdsa.vcxproj.filters
+++ b/ecdsa.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="sm3.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="sm2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ecdsa.c">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="sm2en.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
