密钥交换发送方A 8-9

--- a/ecdsa.vcxproj
+++ b/ecdsa.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -153,6 +153,7 @@
     <ClCompile Include="sm2.c" />
     <ClCompile Include="sm2en.c" />
     <ClCompile Include="sm2encry0.c" />
+    <ClCompile Include="sm2keyex.c" />
     <ClCompile Include="sm3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
