--- a/ecdsa.vcxproj.filters
+++ b/ecdsa.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClCompile Include="main.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="sm2keyex.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
